# open-calc-studio

./: .env.development  .env.production  .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  run-gui-test.sh  test-bestek.rsx  vite.config.ts
.github/workflows/: build.yml  live.yml
docs/: API.md  bascalc-datastructuur.md  ifccalc-formaat.md
docs/api/: README.md  openapi.json
docs/release-notes/: v0.10.0.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.7.0.md  v0.7.1.md  v0.7.10.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.5.md  v0.8.6.md  v0.8.7.md  v0.8.8.md  v0.9.0.md
mcp-server/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
public/: default-budget.xls
public/data/: voorbeeld.ifcCalc
public/libraries/: middelen-gww.json
scripts/: convert-bascalc-to-json.mjs  create-wpcalc-template.ps1  euro-variants.mjs  generate-test-fixtures.mjs  md-preview.mjs
snap/: snapcraft.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: wpcalc-template.calc
src-tauri/src/: accounts.rs  api.rs  lib.rs  main.rs  wpcalc_export.rs  ws_bridge.rs
src-tauri/src/reports/: bouw1.rs  generator.rs  ibis.rs  mod.rs  offerte.rs
src-tauri/tests/: test_bouw1_pdf.rs  test_ibis_pdf.rs
src/data/: codeLibrary.ts  defaultBudget.ts  defaultResourceLibrary.ts
src/extensions/: builtinExtensions.ts  extensionApi.ts  extensionLoader.ts  extensionService.ts  index.ts  types.ts
src/hooks/: useCloudFolderIfcx.ts  (+3 more)
tests/: editor-position.spec.ts  gui-test.spec.ts  test-wpcalc-import.spec.ts
(+281 files in other folders)
